BajiDeveloperEdition/src/objects/Library__c.object
<CustomObject>
    <fields>
        <fullName>Books__c</fullName>
        <label>Books</label>
        <referenceTo>Books__c</referenceTo>
        <relationshipLabel>Librarys</relationshipLabel>
        <relationshipName>Librarys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalId>true</externalId>
        <label>City</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Name__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Please enter the Library Name</inlineHelpText>
        <label>Library Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Library</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Library Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Librarys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>